<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
   	<TextView android:id="@+id/password_header_label"
   		android:text="@string/app_name"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:padding="10dp"
   		android:textSize="24sp"
   		android:textStyle="bold"
   		android:gravity="center_horizontal"></TextView>
   	<TextView android:id="@+id/password_version_label"
   		android:text="@string/password_version_label"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:gravity="center_horizontal"></TextView>
   	<TextView android:id="@+id/password_prompt_label"
   		android:text="@string/password_prompt_label"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:gravity="center_horizontal"
   		android:paddingTop="16sp"></TextView>
   	<EditText android:id="@+id/password_box"
   		android:layout_height="wrap_content"
   		android:text=""
   		android:gravity="center"
   		android:layout_width="fill_parent"
   		android:hint="@string/password_prompt_hint"
   		android:inputType="textPassword"></EditText>
   	<Button android:id="@+id/password_unlock_button"
   		android:text="@string/password_unlock_btn"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"></Button>
</LinearLayout>